tests/lexer/tinvalidintegerliteral2.nim
discard """
  file: "tinvalidintegerliteral2.nim"
  line: 7
  errormsg: "invalid number"
"""

echo 0x
